# oso

./: CMakeLists.txt  camera.cc  camera.hh  components.hh  game.cc  game.hh  game_gui.cc  game_gui.hh  gui_control.cc  gui_control.hh  main.cc  orbit.cc  orbit.hh  oso.py  planet.cc  planet.hh  resources.cc  resources.hh  sdl.cc  sdl.h  types.hh  world.cc  world.hh
orbitmath/: orbit.py
